--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/open-sans": "^5.0.23",
+    "@fontsource/open-sans": "^5.0.22",
     "vue": "^3.3.11"
   },
   "devDependencies": {
